@@ -14,6 +14,7 @@ Verilator 4.201 devel
 **Minor:**
 
 * Add EOFNEWLINE warning when missing a newline at EOF.
+* Changed TIMESCALEMOD from error into a warning.
 * Verilated signals now use VlWide and VlPacked in place of C arrays.
 * Fix class unpacked-array compile error (#2774). [Iru Cai]
 * Fix exceeding command-line ar limit (#2834). [Yinan Xu]
